# ChangeLog for dev-perl/ExtUtils-AutoInstall
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/ExtUtils-AutoInstall/ChangeLog,v 1.17 2005/05/01 17:21:05 slarti Exp $

  01 May 2005; Tom Martin <slarti@gentoo.org>
  ExtUtils-AutoInstall-0.61.ebuild:
  Stable on amd64.

  26 Apr 2005; Bryan Østergaard <kloeri@gentoo.org>
  ExtUtils-AutoInstall-0.61.ebuild:
  Stable on alpha.

  25 Apr 2005; Michael Cummings <mcummings@gentoo.org>
  -ExtUtils-AutoInstall-0.55.ebuild, -ExtUtils-AutoInstall-0.59.ebuild,
  ExtUtils-AutoInstall-0.61.ebuild:
  cleaning

  07 Apr 2005; Michael Hanselmann <hansmi@gentoo.org>
  ExtUtils-AutoInstall-0.56.ebuild:
  Stable on ppc.

  29 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

*ExtUtils-AutoInstall-0.61 (28 Oct 2004)

  28 Oct 2004; Michael Cummings <mcummings@gentoo.org>
  +ExtUtils-AutoInstall-0.61.ebuild:
  New version on cpan

  19 Oct 2004; Dylan Carlson <absinthe@gentoo.org>
  ExtUtils-AutoInstall-0.56.ebuild:
  Stable on amd64.

*ExtUtils-AutoInstall-0.59 (05 Jun 2004)

  05 Jun 2004; Michael Cummings <mcummings@gentoo.org>
  ExtUtils-AutoInstall-0.59.ebuild:
  new version on cpan

  26 May 2004; Bryan Østergaard <kloeri@gentoo.org>
  ExtUtils-AutoInstall-0.56.ebuild:
  Stable on alpha.

  25 Mar 2004; Gustavo Zacarias <gustavoz@gentoo.org>
  ExtUtils-AutoInstall-0.56.ebuild:
  stable on sparc

  25 Feb 2004; Sven Blumenstein <bazik@gentoo.org>
  ExtUtils-AutoInstall-0.55.ebuild:
  Stable on sparc, thanks to Josh Grebe <josh@brokedown.net> for testing!

*ExtUtils-AutoInstall-0.56 (15 Feb 2004)

  15 Feb 2004; Michael Cummings,,, <mcummings@gentoo.org>
  ExtUtils-AutoInstall-0.56.ebuild:
  Current version

  24 Dec 2003; Michael Cummings,,, <mcummings@gentoo.org>
  ExtUtils-AutoInstall-0.52-r1.ebuild, ExtUtils-AutoInstall-0.52.ebuild:
  No longer available on CPAN

*ExtUtils-AutoInstall-0.55 (24 Dec 2003)
