@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/ExtUtils-AutoInstall
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/ExtUtils-AutoInstall/ChangeLog,v 1.17 2005/05/01 17:21:05 slarti Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/ExtUtils-AutoInstall/ChangeLog,v 1.18 2005/06/01 21:08:14 mcummings Exp $
+
+  01 Jun 2005; Michael Cummings <mcummings@gentoo.org>
+  ExtUtils-AutoInstall-0.61.ebuild:
+  Disabling tests - ickkkkk
 
   01 May 2005; Tom Martin <slarti@gentoo.org>
   ExtUtils-AutoInstall-0.61.ebuild:
